[gd_scene load_steps=13 format=3 uid="uid://ydps0kym737e"]

[ext_resource type="Script" path="res://Enemies/Scenes/enemy.gd" id="1_r4i6w"]
[ext_resource type="Resource" uid="uid://cslalod3l863d" path="res://Enemies/Repo/grunt.tres" id="2_g681i"]
[ext_resource type="Texture2D" uid="uid://htr4lvmqwcjx" path="res://Assets/Enemy1.png" id="3_a7nwg"]
[ext_resource type="PackedScene" uid="uid://cpu2psp3r768g" path="res://Scenes/health_component.tscn" id="4_cl57h"]
[ext_resource type="Texture2D" uid="uid://p4tmyj72ng0e" path="res://Assets/gunraindropbullet.png" id="5_7qhg2"]
[ext_resource type="AudioStream" uid="uid://dgi3qcr486fce" path="res://Assets/Sounds/hitHurt.wav" id="6_5fauq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wpvdv"]
radius = 8.5
height = 35.0

[sub_resource type="Animation" id="Animation_o1eqb"]
resource_name = "changeColorThenCharge"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.213787, 0.550364, 1), Color(1, 1, 1, 1), Color(0.00437932, 0.254476, 0.984282, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 1), Vector2(2, 2), Vector2(2, 1), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -17), Vector2(0, 0), Vector2(0, -17), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 2, 2.2, 2.4, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -17), Vector2(0, 0), Vector2(0, -17), Vector2(0, 0), Vector2(0, -17), Vector2(0, -17), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2q3dt"]
resource_name = "gruntDeath"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1.51572),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(10.3, 1), Vector2(18.305, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 2.2974),
"update": 0,
"values": [Color(1, 1, 1, 0.933333), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7nnmu"]
resource_name = "gruntHurt"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.3),
"transitions": PackedFloat32Array(1, 0.133973, 3.13834),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.501961, 0, 0.133333, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqme3"]
_data = {
"changeColorThenCharge": SubResource("Animation_o1eqb"),
"gruntDeath": SubResource("Animation_2q3dt"),
"gruntHurt": SubResource("Animation_7nnmu")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2s8pp"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_r4i6w")
CHARGE_SPEED = 800
enemy = ExtResource("2_g681i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wpvdv")
debug_color = Color(4.23551e-06, 0.616156, 0.595245, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("3_a7nwg")

[node name="HealthComponent" parent="." instance=ExtResource("4_cl57h")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oqme3")
}

[node name="Lifespan" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="DeathPoof" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_2s8pp")
texture = ExtResource("5_7qhg2")
lifetime = 0.5
one_shot = true
explosiveness = 0.41
randomness = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_5fauq")
volume_db = -20.0
max_polyphony = 1000
bus = &"sfx"

[node name="BossKill" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Lifespan" to="." method="_on_lifespan_timeout"]
[connection signal="timeout" from="BossKill" to="." method="_on_boss_kill_timeout"]
